--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -15,209 +15,61 @@
         android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:menu="@menu/add_training_toolbar"
-        app:title="Add training"
+        app:title="New training"
         app:titleTextColor="?attr/colorOnSecondary" />
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_below="@+id/add_training_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/add_training_layout">
+
         <EditText
-            android:layout_marginHorizontal="15sp"
-            android:layout_below="@+id/add_training_toolbar"
             android:id="@+id/edit_training_name"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_training_title"
+            android:layout_marginHorizontal="15sp"
+            android:background="@drawable/edit_text_bottom_line"
+            android:hint="@string/training_name"
+            android:inputType="textShortMessage|textCapSentences"
             android:padding="15sp"
             android:singleLine="true"
-            android:background="@drawable/edit_text_bottom_line"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textCursorDrawable="@null"/>
+            android:textCursorDrawable="@null"
+            android:textSize="20sp" />
 
 
-    <LinearLayout
-        android:layout_marginHorizontal="15sp"
-        android:layout_below="@+id/edit_training_name"
-        android:id="@+id/clExercise0"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
-
-        <Spinner
-            android:layout_marginTop="10dp"
-            android:id="@+id/exercise_type_sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:visibility="visible"
-            android:layout_gravity="right"
-            />
-        <LinearLayout
-            android:padding="10dp"
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:id="@+id/exercise_scroll_view"
             >
-            <TextView
-                android:id="@+id/tw_exercise_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/exercise_name_tw"
-                android:textColor="@color/white"
-                android:visibility="gone"
-                tools:visibility="visible" />
-            <EditText
-                android:layout_marginStart="10dp"
-                android:id="@+id/et_exercise_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:textColor="@color/white"
-                android:background="@drawable/edit_text_bottom_line"
-                android:visibility="gone"
-                tools:visibility="visible"
-                android:textCursorDrawable="@null"/>
-        </LinearLayout>
-
-    <LinearLayout
-        android:padding="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tw_exercise_length"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/exercise_length_tw"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            tools:visibility="visible" />
-
-        <EditText
-            android:layout_marginStart="10dp"
-            android:id="@+id/et_exercise_length"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:textColor="@color/white"
-            android:background="@drawable/edit_text_bottom_line"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:textCursorDrawable="@null"/>
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android:padding="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tw_exercise_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/exercise_description_tw"
-            android:visibility="gone"
-            android:textColor="@color/white"
-            tools:visibility="visible"/>
-
-
-        <EditText
-            android:layout_marginStart="10dp"
-            android:id="@+id/et_exercise_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:textColor="@color/white"
-            android:background="@drawable/edit_text_bottom_line"
-            android:visibility="gone"
-            tools:visibility="visible" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:padding="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/position_layout"
-        >
-
-        <TextView
-            android:id="@+id/tw_exercise_position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/exercise_position_tw"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            tools:visibility="visible" />
-        <EditText
-            android:layout_marginStart="10dp"
-            android:id="@+id/et_exercise_position"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:background="@drawable/edit_text_bottom_line"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            tools:visibility="visible" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:padding="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tw_exercise_repeats"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/exercise_repeats_tw"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            tools:visibility="visible" />
-        <EditText
-            android:layout_marginStart="10dp"
-            android:id="@+id/et_exercise_repeats"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:textColor="@color/white"
-            android:background="@drawable/edit_text_bottom_line"
-            android:visibility="gone"
-            tools:visibility="visible" />
-    </LinearLayout>
-
-        <CheckBox
-            android:id="@+id/cb_exercise_timer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/exercise_timer_cb"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            tools:visibility="visible" />
+        </androidx.recyclerview.widget.RecyclerView>
         <Button
-            android:id="@+id/btn_add_exercise"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="124dp"
-            android:text="@string/Create_exercise"
-            android:visibility="gone"
-            tools:visibility="visible" />
-
-        <Button
-            android:id="@+id/btn_finish_training"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/finish_training"
-            android:visibility="gone"
-            tools:visibility="visible" />
-
-
+            android:gravity="center"
+            android:id="@+id/btn_exercise_add"
+            android:text="Add exercise">
+        </Button>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/add_training_layout"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="162dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="161dp"
+        android:text="Button" />
+
+
     <!--
     <TextView
         android:layout_centerHorizontal="true"
